<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:text="@string/which_disney_character_are_you"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/princessImage"
        android:layout_width="match_parent"
        android:layout_height="258dp"
        android:contentDescription="@string/image_placeholder"
        app:srcCompat="@drawable/disney_logo"
        tools:srcCompat="@drawable/cinderella"/>

    <Button
        android:id="@+id/start_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start" />

    <Button
        android:id="@+id/retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retry" />

    <ScrollView
        android:id="@+id/princess"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/princessInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_out_which_disney_character_you_are"
            android:textAlignment="center"
            android:textSize="20sp" />
    </ScrollView>
</LinearLayout>